arquivos_gramatica/ScalarProductParser.py
# Generated from ScalarProduct.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ScalarProductParser ( Parser ):

    grammarFileName = "ScalarProduct.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'def'", "'return'", "'print'", 
                     "'='", "'for'", "'in'", "'('", "')'", "'['", "']'", 
                     "':'", "','" ]

    symbolicNames = [ "<INVALID>", "CLASSE", "FUNC", "RETORNAR", "IMPRIMIR", 
                      "NOVO", "PARA", "EM", "ABRE_PARENTESES", "FECHA_PARENTESES", 
                      "ABRE_COLCHETES", "FECHA_COLCHETES", "DOIS_PONTOS", 
                      "VIRGULA", "OPERADOR_MATEMATICO", "ID", "NUMERO", 
                      "TEXTO", "WS" ]

    RULE_programa = 0
    RULE_declaracaoClasse = 1
    RULE_bloco = 2
    RULE_declaracaoFuncao = 3
    RULE_listaParametros = 4
    RULE_parametro = 5
    RULE_atribuicao = 6
    RULE_chamadaFuncao = 7
    RULE_imprimirStatement = 8
    RULE_argumentos = 9
    RULE_expressao = 10
    RULE_listaExpressao = 11
    RULE_compreensaoLista = 12
    RULE_acessoLista = 13
    RULE_slice = 14

    ruleNames =  [ "programa", "declaracaoClasse", "bloco", "declaracaoFuncao", 
                   "listaParametros", "parametro", "atribuicao", "chamadaFuncao", 
                   "imprimirStatement", "argumentos", "expressao", "listaExpressao", 
                   "compreensaoLista", "acessoLista", "slice" ]

    EOF = Token.EOF
    CLASSE=1
    FUNC=2
    RETORNAR=3
    IMPRIMIR=4
    NOVO=5
    PARA=6
    EM=7
    ABRE_PARENTESES=8
    FECHA_PARENTESES=9
    ABRE_COLCHETES=10
    FECHA_COLCHETES=11
    DOIS_PONTOS=12
    VIRGULA=13
    OPERADOR_MATEMATICO=14
    ID=15
    NUMERO=16
    TEXTO=17
    WS=18

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracaoClasse(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScalarProductParser.DeclaracaoClasseContext)
            else:
                return self.getTypedRuleContext(ScalarProductParser.DeclaracaoClasseContext,i)


        def getRuleIndex(self):
            return ScalarProductParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = ScalarProductParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 30
                self.declaracaoClasse()
                self.state = 33 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoClasseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASSE(self):
            return self.getToken(ScalarProductParser.CLASSE, 0)

        def ID(self):
            return self.getToken(ScalarProductParser.ID, 0)

        def DOIS_PONTOS(self):
            return self.getToken(ScalarProductParser.DOIS_PONTOS, 0)

        def bloco(self):
            return self.getTypedRuleContext(ScalarProductParser.BlocoContext,0)


        def getRuleIndex(self):
            return ScalarProductParser.RULE_declaracaoClasse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracaoClasse" ):
                listener.enterDeclaracaoClasse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracaoClasse" ):
                listener.exitDeclaracaoClasse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracaoClasse" ):
                return visitor.visitDeclaracaoClasse(self)
            else:
                return visitor.visitChildren(self)




    def declaracaoClasse(self):

        localctx = ScalarProductParser.DeclaracaoClasseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracaoClasse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.match(ScalarProductParser.CLASSE)
            self.state = 36
            self.match(ScalarProductParser.ID)
            self.state = 37
            self.match(ScalarProductParser.DOIS_PONTOS)
            self.state = 38
            self.bloco()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracaoFuncao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScalarProductParser.DeclaracaoFuncaoContext)
            else:
                return self.getTypedRuleContext(ScalarProductParser.DeclaracaoFuncaoContext,i)


        def atribuicao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScalarProductParser.AtribuicaoContext)
            else:
                return self.getTypedRuleContext(ScalarProductParser.AtribuicaoContext,i)


        def chamadaFuncao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScalarProductParser.ChamadaFuncaoContext)
            else:
                return self.getTypedRuleContext(ScalarProductParser.ChamadaFuncaoContext,i)


        def imprimirStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScalarProductParser.ImprimirStatementContext)
            else:
                return self.getTypedRuleContext(ScalarProductParser.ImprimirStatementContext,i)


        def getRuleIndex(self):
            return ScalarProductParser.RULE_bloco

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloco" ):
                listener.enterBloco(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloco" ):
                listener.exitBloco(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloco" ):
                return visitor.visitBloco(self)
            else:
                return visitor.visitChildren(self)




    def bloco(self):

        localctx = ScalarProductParser.BlocoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_bloco)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 44
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        self.state = 40
                        self.declaracaoFuncao()
                        pass

                    elif la_ == 2:
                        self.state = 41
                        self.atribuicao()
                        pass

                    elif la_ == 3:
                        self.state = 42
                        self.chamadaFuncao()
                        pass

                    elif la_ == 4:
                        self.state = 43
                        self.imprimirStatement()
                        pass



                else:
                    raise NoViableAltException(self)
                self.state = 46 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoFuncaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(ScalarProductParser.FUNC, 0)

        def ID(self):
            return self.getToken(ScalarProductParser.ID, 0)

        def ABRE_PARENTESES(self):
            return self.getToken(ScalarProductParser.ABRE_PARENTESES, 0)

        def FECHA_PARENTESES(self):
            return self.getToken(ScalarProductParser.FECHA_PARENTESES, 0)

        def DOIS_PONTOS(self):
            return self.getToken(ScalarProductParser.DOIS_PONTOS, 0)

        def bloco(self):
            return self.getTypedRuleContext(ScalarProductParser.BlocoContext,0)


        def listaParametros(self):
            return self.getTypedRuleContext(ScalarProductParser.ListaParametrosContext,0)


        def getRuleIndex(self):
            return ScalarProductParser.RULE_declaracaoFuncao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracaoFuncao" ):
                listener.enterDeclaracaoFuncao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracaoFuncao" ):
                listener.exitDeclaracaoFuncao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracaoFuncao" ):
                return visitor.visitDeclaracaoFuncao(self)
            else:
                return visitor.visitChildren(self)




    def declaracaoFuncao(self):

        localctx = ScalarProductParser.DeclaracaoFuncaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracaoFuncao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(ScalarProductParser.FUNC)
            self.state = 49
            self.match(ScalarProductParser.ID)
            self.state = 50
            self.match(ScalarProductParser.ABRE_PARENTESES)
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 51
                self.listaParametros()


            self.state = 54
            self.match(ScalarProductParser.FECHA_PARENTESES)
            self.state = 55
            self.match(ScalarProductParser.DOIS_PONTOS)
            self.state = 56
            self.bloco()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parametro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScalarProductParser.ParametroContext)
            else:
                return self.getTypedRuleContext(ScalarProductParser.ParametroContext,i)


        def VIRGULA(self, i:int=None):
            if i is None:
                return self.getTokens(ScalarProductParser.VIRGULA)
            else:
                return self.getToken(ScalarProductParser.VIRGULA, i)

        def getRuleIndex(self):
            return ScalarProductParser.RULE_listaParametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaParametros" ):
                listener.enterListaParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaParametros" ):
                listener.exitListaParametros(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaParametros" ):
                return visitor.visitListaParametros(self)
            else:
                return visitor.visitChildren(self)




    def listaParametros(self):

        localctx = ScalarProductParser.ListaParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_listaParametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.parametro()
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 59
                self.match(ScalarProductParser.VIRGULA)
                self.state = 60
                self.parametro()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ScalarProductParser.ID)
            else:
                return self.getToken(ScalarProductParser.ID, i)

        def DOIS_PONTOS(self):
            return self.getToken(ScalarProductParser.DOIS_PONTOS, 0)

        def getRuleIndex(self):
            return ScalarProductParser.RULE_parametro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametro" ):
                listener.enterParametro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametro" ):
                listener.exitParametro(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametro" ):
                return visitor.visitParametro(self)
            else:
                return visitor.visitChildren(self)




    def parametro(self):

        localctx = ScalarProductParser.ParametroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parametro)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(ScalarProductParser.ID)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 67
                self.match(ScalarProductParser.DOIS_PONTOS)
                self.state = 68
                self.match(ScalarProductParser.ID)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ScalarProductParser.ID, 0)

        def NOVO(self):
            return self.getToken(ScalarProductParser.NOVO, 0)

        def expressao(self):
            return self.getTypedRuleContext(ScalarProductParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return ScalarProductParser.RULE_atribuicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribuicao" ):
                listener.enterAtribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribuicao" ):
                listener.exitAtribuicao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtribuicao" ):
                return visitor.visitAtribuicao(self)
            else:
                return visitor.visitChildren(self)




    def atribuicao(self):

        localctx = ScalarProductParser.AtribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_atribuicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(ScalarProductParser.ID)
            self.state = 72
            self.match(ScalarProductParser.NOVO)
            self.state = 73
            self.expressao(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChamadaFuncaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ScalarProductParser.ID, 0)

        def ABRE_PARENTESES(self):
            return self.getToken(ScalarProductParser.ABRE_PARENTESES, 0)

        def FECHA_PARENTESES(self):
            return self.getToken(ScalarProductParser.FECHA_PARENTESES, 0)

        def argumentos(self):
            return self.getTypedRuleContext(ScalarProductParser.ArgumentosContext,0)


        def getRuleIndex(self):
            return ScalarProductParser.RULE_chamadaFuncao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChamadaFuncao" ):
                listener.enterChamadaFuncao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChamadaFuncao" ):
                listener.exitChamadaFuncao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChamadaFuncao" ):
                return visitor.visitChamadaFuncao(self)
            else:
                return visitor.visitChildren(self)




    def chamadaFuncao(self):

        localctx = ScalarProductParser.ChamadaFuncaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_chamadaFuncao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(ScalarProductParser.ID)

            self.state = 76
            self.match(ScalarProductParser.ABRE_PARENTESES)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 230400) != 0):
                self.state = 77
                self.argumentos()


            self.state = 80
            self.match(ScalarProductParser.FECHA_PARENTESES)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImprimirStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPRIMIR(self):
            return self.getToken(ScalarProductParser.IMPRIMIR, 0)

        def ABRE_PARENTESES(self):
            return self.getToken(ScalarProductParser.ABRE_PARENTESES, 0)

        def expressao(self):
            return self.getTypedRuleContext(ScalarProductParser.ExpressaoContext,0)


        def FECHA_PARENTESES(self):
            return self.getToken(ScalarProductParser.FECHA_PARENTESES, 0)

        def getRuleIndex(self):
            return ScalarProductParser.RULE_imprimirStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImprimirStatement" ):
                listener.enterImprimirStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImprimirStatement" ):
                listener.exitImprimirStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImprimirStatement" ):
                return visitor.visitImprimirStatement(self)
            else:
                return visitor.visitChildren(self)




    def imprimirStatement(self):

        localctx = ScalarProductParser.ImprimirStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_imprimirStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(ScalarProductParser.IMPRIMIR)
            self.state = 83
            self.match(ScalarProductParser.ABRE_PARENTESES)
            self.state = 84
            self.expressao(0)
            self.state = 85
            self.match(ScalarProductParser.FECHA_PARENTESES)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScalarProductParser.ExpressaoContext)
            else:
                return self.getTypedRuleContext(ScalarProductParser.ExpressaoContext,i)


        def VIRGULA(self, i:int=None):
            if i is None:
                return self.getTokens(ScalarProductParser.VIRGULA)
            else:
                return self.getToken(ScalarProductParser.VIRGULA, i)

        def getRuleIndex(self):
            return ScalarProductParser.RULE_argumentos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgumentos" ):
                listener.enterArgumentos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgumentos" ):
                listener.exitArgumentos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgumentos" ):
                return visitor.visitArgumentos(self)
            else:
                return visitor.visitChildren(self)




    def argumentos(self):

        localctx = ScalarProductParser.ArgumentosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_argumentos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.expressao(0)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 88
                self.match(ScalarProductParser.VIRGULA)
                self.state = 89
                self.expressao(0)
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ScalarProductParser.ID, 0)

        def acessoLista(self):
            return self.getTypedRuleContext(ScalarProductParser.AcessoListaContext,0)


        def NUMERO(self):
            return self.getToken(ScalarProductParser.NUMERO, 0)

        def listaExpressao(self):
            return self.getTypedRuleContext(ScalarProductParser.ListaExpressaoContext,0)


        def chamadaFuncao(self):
            return self.getTypedRuleContext(ScalarProductParser.ChamadaFuncaoContext,0)


        def TEXTO(self):
            return self.getToken(ScalarProductParser.TEXTO, 0)

        def compreensaoLista(self):
            return self.getTypedRuleContext(ScalarProductParser.CompreensaoListaContext,0)


        def expressao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScalarProductParser.ExpressaoContext)
            else:
                return self.getTypedRuleContext(ScalarProductParser.ExpressaoContext,i)


        def OPERADOR_MATEMATICO(self):
            return self.getToken(ScalarProductParser.OPERADOR_MATEMATICO, 0)

        def getRuleIndex(self):
            return ScalarProductParser.RULE_expressao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao" ):
                listener.enterExpressao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao" ):
                listener.exitExpressao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressao" ):
                return visitor.visitExpressao(self)
            else:
                return visitor.visitChildren(self)



    def expressao(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ScalarProductParser.ExpressaoContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_expressao, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 96
                self.match(ScalarProductParser.ID)
                pass

            elif la_ == 2:
                self.state = 97
                self.acessoLista()
                pass

            elif la_ == 3:
                self.state = 98
                self.match(ScalarProductParser.NUMERO)
                pass

            elif la_ == 4:
                self.state = 99
                self.listaExpressao()
                pass

            elif la_ == 5:
                self.state = 100
                self.chamadaFuncao()
                pass

            elif la_ == 6:
                self.state = 101
                self.match(ScalarProductParser.TEXTO)
                pass

            elif la_ == 7:
                self.state = 102
                self.compreensaoLista()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 110
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ScalarProductParser.ExpressaoContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                    self.state = 105
                    if not self.precpred(self._ctx, 8):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                    self.state = 106
                    self.match(ScalarProductParser.OPERADOR_MATEMATICO)
                    self.state = 107
                    self.expressao(9) 
                self.state = 112
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ListaExpressaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ABRE_COLCHETES(self):
            return self.getToken(ScalarProductParser.ABRE_COLCHETES, 0)

        def FECHA_COLCHETES(self):
            return self.getToken(ScalarProductParser.FECHA_COLCHETES, 0)

        def argumentos(self):
            return self.getTypedRuleContext(ScalarProductParser.ArgumentosContext,0)


        def getRuleIndex(self):
            return ScalarProductParser.RULE_listaExpressao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaExpressao" ):
                listener.enterListaExpressao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaExpressao" ):
                listener.exitListaExpressao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaExpressao" ):
                return visitor.visitListaExpressao(self)
            else:
                return visitor.visitChildren(self)




    def listaExpressao(self):

        localctx = ScalarProductParser.ListaExpressaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_listaExpressao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(ScalarProductParser.ABRE_COLCHETES)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 230400) != 0):
                self.state = 114
                self.argumentos()


            self.state = 117
            self.match(ScalarProductParser.FECHA_COLCHETES)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompreensaoListaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ABRE_COLCHETES(self):
            return self.getToken(ScalarProductParser.ABRE_COLCHETES, 0)

        def expressao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScalarProductParser.ExpressaoContext)
            else:
                return self.getTypedRuleContext(ScalarProductParser.ExpressaoContext,i)


        def OPERADOR_MATEMATICO(self):
            return self.getToken(ScalarProductParser.OPERADOR_MATEMATICO, 0)

        def PARA(self):
            return self.getToken(ScalarProductParser.PARA, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ScalarProductParser.ID)
            else:
                return self.getToken(ScalarProductParser.ID, i)

        def VIRGULA(self):
            return self.getToken(ScalarProductParser.VIRGULA, 0)

        def EM(self):
            return self.getToken(ScalarProductParser.EM, 0)

        def chamadaFuncao(self):
            return self.getTypedRuleContext(ScalarProductParser.ChamadaFuncaoContext,0)


        def FECHA_COLCHETES(self):
            return self.getToken(ScalarProductParser.FECHA_COLCHETES, 0)

        def getRuleIndex(self):
            return ScalarProductParser.RULE_compreensaoLista

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompreensaoLista" ):
                listener.enterCompreensaoLista(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompreensaoLista" ):
                listener.exitCompreensaoLista(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompreensaoLista" ):
                return visitor.visitCompreensaoLista(self)
            else:
                return visitor.visitChildren(self)




    def compreensaoLista(self):
